2006-10-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: clear and reset cp when a sub-job finishes (fixes
	  coredump in mget).

2006-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use Delete on SMTask derivative Speedometer.
	* SMTask.cc: add debug print when deleting running task.
	* FileAccess.cc: fixed coredump when path.url is null after Change.
	* CopyJob.cc: Delete done CopyJob - fix a leak.

2006-08-29  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h, MirrorJob.cc, MirrorJob.h, resource.cc:
	  new mirror option --skip-noaccess and setting mirror:skip-noaccess.
	  (FileSet::ExcludeUnaccessible) new method.

2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, QueueFeeder.h, commands.cc: add settings
	  cmd:parallel and cmd:queue-parallel; backout QueueFeeder changes;
	  drop queue --parallel option.

2006-08-22  Markus Schoder <lists@gammarayburst.de>

	* CmdExec.cc, commands.cc, QueueFeeder.h: add queue --parallel option.

2006-08-22  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.h: drop MakeRef macro, it makes trouble with multiple arg evaluation.

2006-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, resource.cc: add mirror:include-regex setting.

2006-08-07  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc,
	  FindJobDu.cc, FindJobDu.h: update for new human_readable; use enum
	  for long options.
	* MirrorJob.cc: use enum for long options.
	* ftpclass.cc: load ssl keys for data connection.
	* resource.cc: new setting ftp:ssl-data-use-keys.

2006-08-04  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: disable ssl on errors if not forced.
	* Timer.cc: fix timer chain head corruption.

2006-08-02  Daniel Black <dragonheart@gentoo.org>

	* Makefile.am: fix linking with modules and socks.
	* CmdExec.cc, CmdExec.h, ConnectionSlot.cc, Job.cc: save url returned